@@ -69,10 +69,12 @@ import org.tigris.subversion.svnclientadapter.SVNUrl;
  *
  */
 public class Copy extends SvnCommand {
+  
     private File srcPath = null;
     private File destPath = null;
     private SVNUrl srcUrl = null;
     private SVNUrl destUrl = null;
+    private boolean makeparents = false;
     
     /** revision to copy from (head by default) */
     private SVNRevision revision = SVNRevision.HEAD; 
@@ -84,15 +86,17 @@ public class Copy extends SvnCommand {
 
         try {
             if (srcPath != null) {
-                if (destPath != null)
+                if (destPath != null) {
                     svnClient.copy(srcPath, destPath);
-                else
+                } else {
                     svnClient.copy(srcPath, destUrl, message);
+                }
             } else {
-            	if (destPath != null)
-            		svnClient.copy(srcUrl,destPath,revision);
-            	else
-            		svnClient.copy(srcUrl,destUrl,message, revision);
+              if (destPath != null) {
+                  svnClient.copy(srcUrl,destPath,revision);
+              } else {
+                  svnClient.copy(srcUrl,destUrl,message, revision, makeparents);
+              }
             }
         } catch (SVNClientException e) {
             throw new SvnAntException("Can't copy", e);
@@ -104,53 +108,51 @@ public class Copy extends SvnCommand {
      * Ensure we have a consistent and legal set of attributes
      */
     protected void validateAttributes() throws SvnAntValidationException {
-        if (((srcPath == null) && (srcUrl == null))
-            || ((srcPath != null) && (srcUrl != null)))
+        if (((srcPath == null) && (srcUrl == null)) || ((srcPath != null) && (srcUrl != null))) {
             throw new SvnAntValidationException("srcPath attribute or srcUrl attribute must be set");
-
-        if (((destPath == null) && (destUrl == null))
-            || ((destPath != null) && (destUrl != null)))
+        }
+        if (((destPath == null) && (destUrl == null)) || ((destPath != null) && (destUrl != null))) {
             throw new SvnAntValidationException("destPath attribute or destUrl attribute must be set");
-        
-        if ((destUrl != null) && (message == null))
+        }
+        if ((destUrl != null) && (message == null)) {
             throw new SvnAntValidationException("message attribute needed when destUrl is set");
-        
-        if ((destUrl == null) && (message != null))
+        }
+        if ((destUrl == null) && (message != null)) {
             throw new SvnAntValidationException("message attribute cannot be used when destUrl is not set");
-            
-        if (revision == null)
+        }
+        if (revision == null) {
             throw SvnAntValidationException.createInvalidRevisionException();
-        
+        }
     }
 
-	/**
-	 * set the path to copy from
-	 * @param srcPath
-	 */
+    /**
+     * set the path to copy from
+     * @param srcPath
+     */
     public void setSrcPath(File srcPath) {
         this.srcPath = srcPath;
     }
 
-	/**
-	 * set the path to copy to
-	 * @param destPath
-	 */
+    /**
+     * set the path to copy to
+     * @param destPath
+     */
     public void setDestPath(File destPath) {
         this.destPath = destPath;
     }
 
-	/**
-	 * set the url to copy from
-	 * @param srcUrl
-	 */
+    /**
+     * set the url to copy from
+     * @param srcUrl
+     */
     public void setSrcUrl(SVNUrl srcUrl) {
         this.srcUrl = srcUrl;
     }
 
-	/**
-	 * set the url to copy to
-	 * @param destUrl
-	 */
+    /**
+     * set the url to copy to
+     * @param destUrl
+     */
     public void setDestUrl(SVNUrl destUrl) {
         this.destUrl = destUrl;
     }
@@ -170,9 +172,17 @@ public class Copy extends SvnCommand {
      * @param revision
      */
     public void setRevision(String revision) {
-		this.revision = getRevisionFrom(revision);
+        this.revision = getRevisionFrom(revision);
     }
 
-
+    /**
+     * Forces the creation of the parents first if a copy has to be done from a <code>srcUrl</code>
+     * to a <code>destUrl</code>.
+     * 
+     * @param newmakeparents   <code>true</code> <=> Create parents first.
+     */
+    public void setMakeParents(boolean newmakeparents) {
+        this.makeparents = newmakeparents;
+    }
 
 }
